# llm-eval

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: demo.py
llm_eval/: __init__.py  cli.py  config.py  types.py
llm_eval/attacks/: __init__.py  base.py  jailbreak.py  prompt_injection.py
llm_eval/metrics/: __init__.py  base.py  faithfulness.py  hallucination.py  relevance.py  schema_compliance.py  toxicity.py
llm_eval/runners/: reporter.py  suite.py
tests/: test_attacks.py  test_reporter.py  test_schema_metric.py  test_suite.py
